fix: height scrollbar's

--- a/src/app/style.css
+++ b/src/app/style.css
@@ -21,7 +21,7 @@ html, body{
   margin: 0;
 ::-webkit-scrollbar {
   width: 5px;
-  height: 30px;
+  height: 5px;
 }
   ::-webkit-scrollbar-button {
     width: 0px;
